# boto3-parallel

./: pyproject.toml
paras3/: config.py  exception.py  multicore_utils.py  s3.py  s3_util.py  s3op.py  util.py
